2009-12-23  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.[c,h], src/gui-editor.[c,h], src/interface.c: Add basic
	printing support to assembly listing window. Print settings are not saved.
	* src/callbacks.c, src/asm-listing.c: Make the text view in assembly
	listing read only. Update the message at the top accordingly.
	* po/gnusim8085.pot: Auto updated with 'make dist'.

2009-12-20  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-keypad.c: Process keypad button events only when the mode is
	not debug. Fixes SF #2462607.
	* src/interface.c: Add certain size to assembler listing window. Fixes
	SF #1942893.
	* data/8085asm.lang: Add sp to the list of registers. Fixes SF #2582426.
	* Makefile.[am,in], GNUSim8085.desktop.in: Merge patches from Debian.

2009-12-19  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-app.c, src/gui-keypad.c, src/gui-list-message.c,
	src/interface.c: Swap horizontal and vertical panes for better
	arrangement of widgets. Provides more vertical and slightly more
	horizontal area to the editor.

2009-07-16  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/asm-genobj.c: iAdded more description invalid operand error
	message.
	* src/gui-list-message.c: Fixed wrong line highlight issue.

2008-12-21  Onkar Shinde  <onkarshinde@gmail.com>

	* AUTHORS: Add Krishna Bharadwaj to list of patch contributors.
	Modify Sridhar's email id.
	* src/support.[c,h]: Add function to read authors list from AUTHORS
	file. Remove unused functions.
	* src/interface.c: Call function to read authors from AUTHORS file.
	* po/gnusim8085.pot: Auto updated.
	* debian/: There is no point of maintaining our own version of
	packaging files. Hence remove the directory.

2008-12-20  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: fix DAD instruction carry set/reset
	bug. Thanks to Aditya M for the patch.
	* AUTHORS: Changed Onkar's email id.

2008-12-11  Onkar Shinde  <onkarshinde@gmail.com>